chore: update notebooks and ignore legacy
- refresh notebook outputs

- add legacy to gitignore

--- a/notebooks/flare_create_graphs.ipynb
+++ b/notebooks/flare_create_graphs.ipynb
@@ -54,7 +54,7 @@
      "output_type": "stream",
      "text": [
       "Publication style settings applied.\n",
-      "Debug output dir: /Users/daisukeyamashiki/Code/Research/kyoto-flare-detection/outputs/figures/debug/20260206_182912\n"
+      "Debug output dir: /Users/daisukeyamashiki/Code/Research/kyoto-flare-detection/outputs/figures/debug/20260206_185924\n"
      ]
     }
    ],
@@ -1119,7 +1119,7 @@
     "        ax.tick_params(axis='both', which='major', labelsize=16)\n",
     "\n",
     "        fig.tight_layout()\n",
-    "        plt.savefig(output_dir / 'analysis_result_maxene_plot_pearsonr.pdf', bbox_inches='tight')\n",
+    "        # plt.savefig(output_dir / 'analysis_result_maxene_plot_pearsonr.pdf', bbox_inches='tight')\n",
     "        plt.show()\n",
     "    else:\n",
     "        print(\"\\nNo data was plotted.\")\n",
